# OzniVITA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pybind_vita.cpp  send_tcp.py  send_udp.py  test.py  vita_socket  vita_socket.cpp
RH/: CMakeLists.txt  Makefile  pybind_vita.cpp  rh_file_parser.cpp  test_parse.py
libs/libvrt/example/src/: write_if_data_advanced.c  write_if_data_simple.c
libs/libvrt/src/: vrt_read.c
